--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <label class="logo">Plays</label>
     <ul class="menu_items">
         <li class="active"><a href="index.html">Inicio</a></li>
-        <li><a href="juegos.html">juegos</a></li>
+        <li><a href="juegos.html">juegos.html</a></li>
     </ul>
        <span class="btn_menu">
          <i class="fas fa-bars"></i>
