--- a/juegos.html
+++ b/juegos.html
@@ -17,8 +17,8 @@
     <nav class="menu">
         <label class="logo">InnovacionEducativa</label>
         <ul class="menu_items">
-            <li class="active"><a href="index.html">Inicio</a></li>
-            <li><a href="Acerca de.html">Acerca de</a></li>
+            <li class="active"><a href="index.html">Volver</a></li>
+          
         </ul>
            <span class="btn_menu">
              <i class="fas fa-bars"></i>
