--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </nav>
       
         <section class="textos-header">
-            <h1>Innovación educativa durante la pandemia de covid 19</h1>
-            <h2><strong>Aprende sobre la innovacion educativa</strong></h2>
+            <h1>Plays</h1>
+            <h2><strong>Diviertete aprendiendo></h2>
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
