--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       
         <section class="textos-header">
             <h1>Plays</h1>
-            <h2><strong>Diviertete aprendiendo></h2>
+            <h2><strong>Diviertete aprendiendo</h2>
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
