--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <main>
         <section class="contenedor sobre-nosotros">
-            <h2 class="titulo">Aprende sobre la innovacion educativa</h2>
+            <h2 class="titulo">¿Que es plays?</h2>
             <div class="contenedor-sobre-nosotros">
                 <img src="img/ilustracion2.svg" alt="" class="imagen-about-us">
                 <div class="contenido-textos">
