--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     </header>
     <main>
         <section class="contenedor sobre-nosotros">
-            <h2 class="titulo">¿Que es plays?</h2>
+            <h2 class="titulo">Juego Educativo - Plays</h2>
             <div class="contenedor-sobre-nosotros">
                 <img src="img/ilustracion2.svg" alt="" class="imagen-about-us">
                 <div class="contenido-textos">
                     <h3><span>1</span> ¿Que es?</h3>
-                    <p>La innovación educativa es la incorporación sistemática y planificada de prácticas transformadoras, orientadas a mejorar los procesos de enseñanza y aprendizaje</p>
+                    <p>Plays es un portal educativo, donde puedes ingresar, para aprender sobre la innovacion educativa y entretenerte aprendiendo</p>
                     <h3><span>2</span>¿En que nos ayuda?</h3>
                     <p>En el aprendizaje la innovacion resulta ser una accion que ayuda al estudiante a entender mas la clase y no solo eso si no que crea un ambiente de responsabilidad en el aula</p>
                 </div>
