--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h3><span>1</span> ¿Que es?</h3>
                     <p>Plays es un portal educativo, donde puedes ingresar, para aprender sobre la innovacion educativa y entretenerte aprendiendo</p>
                     <h3><span>2</span>¿En que nos ayuda?</h3>
-                    <p>En el aprendizaje la innovacion resulta ser una accion que ayuda al estudiante a entender mas la clase y no solo eso si no que crea un ambiente de responsabilidad en el aula</p>
+                    <p>Podemos jugar y al mismo tiempo aprender, siendo esta una gran metodologia para enseñar a las generaciones modernas</p>
                 </div>
             </div>
         </section>
