--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <div class="contenedor-sobre-nosotros">
                 <img src="img/ilustracion2.svg" alt="" class="imagen-about-us">
                 <div class="contenido-textos">
-                    <h3><span>1</span> ¿Que es?</h3>
+                    <h3><span></span> ¿Que es?</h3>
                     <p>Plays es un portal educativo, donde puedes ingresar, para aprender sobre la innovacion educativa y entretenerte aprendiendo</p>
-                    <h3><span>2</span>¿En que nos ayuda?</h3>
+                    <h3><span></span>¿En que nos ayuda?</h3>
                     <p>Podemos jugar y al mismo tiempo aprender, siendo esta una gran metodologia para enseñar a las generaciones modernas</p>
                 </div>
             </div>
